--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "src/index.js",
   "scripts": {
     "start": "nodemon index.js",
+    "watch": "node-sass --watch src/resource/scss/ -o src/public/css/ ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
-    "express-handlebars": "^6.0.6"
+    "express-handlebars": "^6.0.6",
+    "node-sass": "^7.0.1"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
