--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "nodemon index.js",
+    "beautiful": "prettier --single-quote --trailing-comma all --tab-width 4 --write 'src/**/*.{js,json,scss}' ",
     "watch": "node-sass --watch src/resources/scss/ -o src/public/css/ ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,7 +14,10 @@
   "dependencies": {
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
-    "node-sass": "^7.0.1"
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "node-sass": "^7.0.1",
+    "prettier": "^2.7.1"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
